# vrchat-group-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.yml  documentation.yml  enhancement.yml
.github/workflows/: ci.yml  release.yml  version-check.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: updater.json
src-tauri/icons/: vgm-icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: error.rs  lib.rs  settings_store.rs  token_store.rs  update_handler.rs  vrc_api.rs
src/app/: App.tsx
src/app/components/: AppSidebar.tsx
src/app/components/figma/: ImageWithFallback.tsx
src/app/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  (+7 more)
src/app/pages/: GroupsPage.tsx  LoginPage.tsx  SettingsPage.tsx
src/hooks/: useAutoUpdate.ts  useTheme.ts
src/lib/: utils.ts  vrcApi.ts
src/styles/ui/: accordion.css
src/types/: index.ts
